--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ line-height: 25px;
     </ul>
   </div>
 
-<video autoplay muted loop>
+<video autoplay loop>
   <!-- 
 - Video needs to be muted, since Chrome 66+ will not autoplay video with sound.
 WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
