--- a/about.html
+++ b/about.html
@@ -85,8 +85,9 @@ body{
 
 }
  
-  a:link {
-    text-decoration: none;
+ a:link {
+     color: #ff0000;
+    text-decoration: white;
 }
 a:hover {
     text-decoration: #ff0000;
