--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@ line-height: 25px;
   position: absolute;
   color: #FFFFFF;
 }
-  a:link {
-    text-decoration: none;
+   a:link {
+     color: #ff0000;
+    text-decoration: white;
 }
   </style>
 </head>
