--- a/about.html
+++ b/about.html
@@ -9,9 +9,11 @@
 	font-family: sans-serif;
 }
 body{
-	background-color: #000000;
-	   
-}
+	background-image: url('https://www.mercedes-benz.com/en/vehicles/passenger-cars/mercedes-benz-concept-cars/vision-avtr/_jcr_content/root/slider_833502777/sliderchilditems/slideritem_141033694_341372895/image/MQ7-0-image-20200107144029/14-mercedes-benz-vehicles-concept-cars-vision-avtr-3400x1440.jpeg');
+	background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  }
 
 .column {
   float: left;
@@ -85,9 +87,8 @@ body{
 
 }
  
- a:link {
-     color: #ff0000;
-    text-decoration: white;
+  a:link {
+    text-decoration: none;
 }
 a:hover {
     text-decoration: #ff0000;
@@ -137,13 +138,7 @@ a:active {
 	margin: 30px 0 30px 40px;
 	color: #ffffff;
 }
-.image{
-	  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  height: 75%;
-}
+
 
 @media screen and (max-width: 650px) {
   .column {
@@ -162,12 +157,7 @@ a:active {
 		 	<li class="active">About </a></li>
 			<li><a href="contact.html">Contact </a></li>
 		</ul>
-	</div>
-	<div>
-		<img class="image" src="https://www.mercedes-benz.com/en/vehicles/passenger-cars/mercedes-benz-concept-cars/vision-avtr/_jcr_content/root/slider_833502777/sliderchilditems/slideritem_141033694_341372895/image/MQ7-0-image-20200107144029/14-mercedes-benz-vehicles-concept-cars-vision-avtr-3400x1440.jpeg">
-
-	</div>
-	
+	</div>	
 
 <div class="row">
   <div class="column">
